--- a/package.json
+++ b/package.json
@@ -6,15 +6,28 @@
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "test": "cross-env NODE_ENV=test jest --no-cache --verbose --detectOpenHandles"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
+    "express-rate-limit": "^5.5.1",
+    "gravatar": "^1.8.2",
+    "helmet": "^4.6.0",
+    "jimp": "^0.16.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.14",
+    "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
-    "nanoid": "^3.1.30"
+    "multer": "^1.4.3",
+    "nanoid": "^3.1.30",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
@@ -22,6 +35,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "nodemon": "2.0.7"
+    "jest": "^27.4.3",
+    "nodemon": "2.0.7",
+    "supertest": "^6.1.6"
   }
 }
