--- a/package.json
+++ b/package.json
@@ -6,22 +6,37 @@
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "test": "cross-env NODE_ENV=test jest --no-cache --verbose --detectOpenHandles"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.6",
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
+    "express-rate-limit": "5.2.6",
+    "gravatar": "^1.8.2",
+    "helmet": "^4.4.1",
+    "jimp": "^0.16.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.15",
+    "mongoose": "^6.0.4",
+    "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
-    "nanoid": "^3.1.30"
+    "multer": "^1.4.3",
+    "nanoid": "^3.1.25",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.19.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
     "nodemon": "2.0.7"
   }
 }
